iz prediction minor update

--- a/examples/1_manual_pipeline.ipynb
+++ b/examples/1_manual_pipeline.ipynb
@@ -220,9 +220,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a78c877",
+   "metadata": {},
+   "source": [
+    "## Veiw IZ prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3006f6c3",
+   "id": "c314d4f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from megspikes.localization.localization import array_to_stc\n",
+    "stc = array_to_stc(dataset.iz_prediction.values[:, -1],\n",
+    "                   sim.case_manager.fwd['ico5'],\n",
+    "                   sim.case_manager.case)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9048a4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib qt5\n",
+    "brain = stc.plot(subjects_dir=sim.case_manager.freesurfer_dir, hemi='both')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d89f8282",
    "metadata": {},
    "outputs": [],
    "source": []
