--- a/examples/1_manual_pipeline.ipynb
+++ b/examples/1_manual_pipeline.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a78c877",
+   "id": "a15224d0",
    "metadata": {},
    "source": [
     "## Veiw IZ prediction"
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c314d4f1",
+   "id": "1fb35f19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,18 +243,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9048a4c",
+   "id": "f6a29cd6",
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib qt5\n",
+    "\n",
+    "# Add function from visualization \n",
     "brain = stc.plot(subjects_dir=sim.case_manager.freesurfer_dir, hemi='both')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89f8282",
+   "id": "75f21d33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26f383b6",
+   "metadata": {},
+   "source": [
+    "## Evaluate Irritative Zone prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "069aa5ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from megspikes.scoring.scoring import ScoreIZPrediction\n",
+    "scorer = ScoreIZPrediction()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9e874b3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "scorer.score(dataset, sim.mni_resection, 'peak')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e2cc8c4",
    "metadata": {},
    "outputs": [],
    "source": []
