test noise levels

--- a/examples/1_manual_pipeline.ipynb
+++ b/examples/1_manual_pipeline.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a15224d0",
+   "id": "74e57d65",
    "metadata": {},
    "source": [
     "## Veiw IZ prediction"
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fb35f19",
+   "id": "d05ebd9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a29cd6",
+   "id": "54484502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,14 +256,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75f21d33",
+   "id": "b8db1e6a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "26f383b6",
+   "id": "c29333f0",
    "metadata": {},
    "source": [
     "## Evaluate Irritative Zone prediction"
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "069aa5ad",
+   "id": "32e94b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9e874b3",
+   "id": "07cf978e",
    "metadata": {
     "scrolled": true
    },
@@ -293,9 +293,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb70a1a7",
+   "metadata": {},
+   "source": [
+    "## Test noise levels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e2cc8c4",
+   "id": "e1a90849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for noise in [0.5, 1, 2, 5, 10]:\n",
+    "    sim.simulate_dataset(noise_scaler=noise)\n",
+    "    pipe = manual_pipeline(sim.case_manager, db, \n",
+    "                           sim.detections, sim.clusters - 1)\n",
+    "    dataset, _ = pipe.fit_transform((None, sim.raw_simulation.copy()))\n",
+    "    baseline_score = scorer.score(dataset, sim.mni_resection, 'baseline')\n",
+    "    slope_score = scorer.score(dataset, sim.mni_resection, 'slope')\n",
+    "    peak_score = scorer.score(dataset, sim.mni_resection, 'peak')\n",
+    "    print(f\"Scores: baseline={baseline_score}, slope={slope_score}, peak={peak_score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9609b82a",
    "metadata": {},
    "outputs": [],
    "source": []
