clean detection and pipline

--- a/examples/1_manual_pipeline.ipynb
+++ b/examples/1_manual_pipeline.ipynb
@@ -2,8 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4c22bfcf",
-   "metadata": {},
    "source": [
     "## Manual Pipeline\n",
     "\n",
@@ -13,15 +11,13 @@
     "\n",
     "We will use the results presented in this nodebook as a baseline for the automated pipelines.\n",
     "\n",
-    "First, we import the simulation module and other packages. NOTE: To import the simulation we should change the working directory if we are running this example from the cloned GitHub repository."
-   ]
+    "NOTE: To import the megspikes modules we should change the working directory if we are running this example from the cloned GitHub repository."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a4b294c",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -45,286 +41,273 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "b82a1028",
-   "metadata": {},
    "source": [
     "## Prepare the simulation"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a59a7125",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "sim = Simulation(sample_path)\n",
     "sim.simulate_dataset()\n",
     "sim"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "dfc7ef6b",
-   "metadata": {},
    "source": [
     "`sim.detections` is an array of spike peak localizations in samples. We will use it as manual detections."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47cd842a",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "sim.detections"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "9bd895b7",
-   "metadata": {},
    "source": [
     "`sim.clusters` is an array of clusters that corresponds to the simulation source index."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddd482ed",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "sim.clusters"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "77a527d0",
-   "metadata": {},
    "source": [
     "## Run Manual Pipeline"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ea0fcef",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from megspikes.pipeline import manual_pipeline\n",
-    "from megspikes.database.database import read_meg_info_for_database\n",
+    "from megspikes.pipeline import iz_prediction_pipeline\n",
     "from sklearn import set_config\n",
     "set_config(display='diagram')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d6fbc57",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "db = read_meg_info_for_database(\n",
     "    sim.case_manager.fif_file,\n",
     "    sim.case_manager.fwd['ico5'])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "072d4027",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "pipe = manual_pipeline(sim.case_manager, db, \n",
-    "                       sim.detections, sim.clusters - 1)\n",
+    "params = {\n",
+    "    'PrepareClustersDataset': {'detection_sfreq': 1000.}\n",
+    "}\n",
+    "pipe = iz_prediction_pipeline(sim.case_manager, params)\n",
     "pipe"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5ad2893",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "dataset, meg_data = pipe.fit_transform((None, sim.raw_simulation.copy()))"
-   ]
+    "detections = {\n",
+    "    'spikes': sim.detections,\n",
+    "    'clusters': sim.clusters - 1\n",
+    "}\n",
+    "dataset, meg_data = pipe.fit_transform((detections, sim.raw_simulation.copy()))"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "6a0166bf",
-   "metadata": {},
    "source": [
     "`dataset` is an instance of xarray.Dataset, and it includes all the results. We can explore the results and the corresponding metadata."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9433a07e",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "dataset"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "293ce813",
-   "metadata": {},
    "source": [
     "## View localized cluster\n",
     "\n",
     "First we should convert numpy ndarray to mne.SourceEstimate. We use `array_to_stc` for this."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6def1bf6",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from megspikes.localization.localization import array_to_stc\n",
     "\n",
     "stc = array_to_stc(dataset.mne_localization.values[0, 0, :, :],\n",
     "                   sim.case_manager.fwd['ico5'],\n",
     "                   sim.case_manager.case)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "90494459",
-   "metadata": {},
    "source": [
     "Now we can plot the cluster."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6426797",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%matplotlib qt5\n",
     "brain = stc.plot(subjects_dir=sim.case_manager.freesurfer_dir, hemi='both')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "74e57d65",
-   "metadata": {},
    "source": [
     "## Veiw IZ prediction"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d05ebd9a",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from megspikes.localization.localization import array_to_stc\n",
     "stc = array_to_stc(dataset.iz_prediction.values[:, -1],\n",
     "                   sim.case_manager.fwd['ico5'],\n",
     "                   sim.case_manager.case)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54484502",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%matplotlib qt5\n",
     "\n",
     "# Add function from visualization \n",
     "brain = stc.plot(subjects_dir=sim.case_manager.freesurfer_dir, hemi='both')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8db1e6a",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "c29333f0",
-   "metadata": {},
    "source": [
     "## Evaluate Irritative Zone prediction"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e94b9b",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from megspikes.scoring.scoring import ScoreIZPrediction\n",
     "scorer = ScoreIZPrediction()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07cf978e",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
    "source": [
     "scorer.score(dataset, sim.mni_resection, 'peak')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "markdown",
-   "id": "fb70a1a7",
-   "metadata": {},
    "source": [
     "## Test noise levels"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1a90849",
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "params = {\n",
+    "    'PrepareClustersDataset': {'detection_sfreq': 1000.}\n",
+    "}\n",
+    "detections = {\n",
+    "    'spikes': sim.detections,\n",
+    "    'clusters': sim.clusters - 1\n",
+    "}\n",
+    "\n",
     "for noise in [0.5, 1, 2, 5, 10]:\n",
     "    sim.simulate_dataset(noise_scaler=noise)\n",
-    "    pipe = manual_pipeline(sim.case_manager, db, \n",
-    "                           sim.detections, sim.clusters - 1)\n",
-    "    dataset, _ = pipe.fit_transform((None, sim.raw_simulation.copy()))\n",
+    "    pipe = iz_prediction_pipeline(sim.case_manager, params)\n",
+    "    dataset, _ = pipe.fit_transform((detections, sim.raw_simulation.copy()))\n",
     "    baseline_score = scorer.score(dataset, sim.mni_resection, 'baseline')\n",
     "    slope_score = scorer.score(dataset, sim.mni_resection, 'slope')\n",
     "    peak_score = scorer.score(dataset, sim.mni_resection, 'peak')\n",
     "    print(f\"Scores: baseline={baseline_score}, slope={slope_score}, peak={peak_score}\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9609b82a",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
