fix minor bugs tutorials

--- a/examples/0_simulation.ipynb
+++ b/examples/0_simulation.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Simulation\n",
     "\n",
@@ -12,13 +11,12 @@
     "3. Evaluate the signal to noise ration of the simulated events\n",
     "\n",
     "First, we import the `simulation` module and other packages. NOTE: To import the `simulation` we should change the working directory if we are running this example from the cloned GitHub repository.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -37,25 +35,25 @@
     "from megspikes.simulation.simulation import Simulation\n",
     "\n",
     "# Setup the path for the simulation\n",
-    "sample_path = Path(os.getcwd()) / 'examples' / 'data'\n",
+    "sample_path = Path(os.getcwd()) / 'examples' / 'data' / '0_simulation'\n",
     "sample_path.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Create new Simulation class instance"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# 15 events for each spike shape\n",
     "n_events = [15, 15, 15, 15]\n",
@@ -66,22 +64,22 @@
     "sim = Simulation(sample_path, n_events=n_events,\n",
     "                 simultaneous=simultaneous)\n",
     "sim"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Spike shapes\n",
     "\n",
     "For the simulation we use four different spike shapes extracted from the stereo-EEG recording. `sim.activations` contains the list with labels and amplitudes for each spike shape. In the next cell we plot spike shapes and the peak for each spike shape. We will use this peaks to annotate simulated raw data and estimate signal to noise ratio."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "fig, ax = plt.subplots(2, 2, figsize=(10, 7))\n",
     "for i, (key, var) in zip(range(4), sim.activations.items()):\n",
@@ -99,22 +97,22 @@
     "    axi.set_ylabel(\"$Amplitude [AU]$\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Simulate raw\n",
     "\n",
     "To simulate raw data we follow the MNE-Python [tutorial](https://mne.tools/stable/auto_examples/simulation/simulated_raw_data_using_subject_anatomy.html). We simulate raw data and dataset by calling `sim.simulate_dataset`."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# multiply the noise covarince by the scaler\n",
     "noise_scaler = 1\n",
@@ -124,38 +122,38 @@
     "\n",
     "# filter simulated raw data\n",
     "sim.raw_simulation.filter(2, 90)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "`sim.simulate_dataset` function added the annotation for the simulated raw data at the peak. We can view the simulated raw data using `mne.io.Raw.plot()`."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%matplotlib qt5\n",
     "\n",
     "sim.raw_simulation.plot(block=True);"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Using the annotation we can create epochs for each channel type. Note that we have 14 events instead of 15 for the fist and the last simulated spikes shape. This happens beause there is no one second window around the first and the last event in the simulation."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "events = mne.events_from_annotations(sim.raw_simulation)\n",
     "epochs_grad = mne.Epochs(\n",
@@ -167,40 +165,40 @@
     "    baseline=None, preload=True, reject_by_annotation=False,\n",
     "    proj=False, picks='mag')\n",
     "print(epochs_mag, '\\n', epochs_grad)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We can plot the average simulated events for the __spike shape 4__."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "epochs_grad['SRC4'].average().plot();"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Plot sources locations\n",
     "\n",
     "\n",
     "We can plot the locations of the labels on the glass brain. Later we will call this as a __resection area__ and use this locations as ground truth to compare with the results of our detection pipelines."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "fig, ax = plt.subplots(figsize=(15, 7))\n",
@@ -210,11 +208,12 @@
     "            None, display_mode='lzry', figure=fig, axes=ax)\n",
     "\n",
     "display.add_markers(sim.mni_resection, marker_color='indigo', alpha=0.6)\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# SNR\n",
     "\n",
@@ -225,20 +224,19 @@
     "$$10*\\log_{10} \\left( \\frac{1}{N_{ch}}\\sum_{k=1}^{N_{ch}} \\frac{\\frac{1}{N_{tr}}\\sum_{t=1}^{N_{tr}}a_{k}^2}{\\frac{1}{N_{tr}}\\sum_{t=1}^{N_{tr}}s_{k}^2} \\right) \\tag{1}$$\n",
     "\n",
     "where $a_{k}^2$ is the mean $amplitude^2$ around the peak (+-20 ms) of the channel $k$, $s_{k}^2$ is the noise variance of this channel, $N_{tr}$ is number of trials and $N_{ch}$ is the number of channels. We estimated two SNR: SNR for all channels and SNR for the first 20 channels with the maximal amplitude.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We plot the average $amplitude^2$ across the trial for all channels and 20 with the maximal amplitude using `plot_epochs_snr`."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from megspikes.visualization.visualization import plot_epochs_snr\n",
@@ -246,14 +244,16 @@
     "for src in epochs_grad.event_id.keys():\n",
     "    plot_epochs_snr(epochs_grad, src)\n",
     "    plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
