--- a/examples/1_manual_pipeline.ipynb
+++ b/examples/1_manual_pipeline.ipynb
@@ -33,7 +33,7 @@
     "from megspikes.simulation.simulation import Simulation\n",
     "\n",
     "# Setup the path for the simulation\n",
-    "sample_path = Path(os.getcwd()) / 'examples' / 'data'\n",
+    "sample_path = Path(os.getcwd()) / 'examples' / 'data' / '1_manual_pipeline'\n",
     "sample_path.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "%load_ext autoreload\n",
@@ -209,8 +209,7 @@
     "%matplotlib qt5\n",
     "import mne\n",
     "from megspikes.visualization.visualization import ClusterSlopeViewer\n",
-    "mne.viz.set_3d_backend('pyvista')\n",
-    "pn.extension()"
+    "mne.viz.set_3d_backend('pyvista')"
    ],
    "outputs": [],
    "metadata": {}
