--- a/examples/0_simulation.ipynb
+++ b/examples/0_simulation.ipynb
@@ -121,7 +121,8 @@
     "sim.simulate_dataset(noise_scaler=noise_scaler)\n",
     "\n",
     "# filter simulated raw data\n",
-    "sim.raw_simulation.filter(2, 90)"
+    "sim.raw_simulation.filter(2, 90)\n",
+    "sim.raw_simulation.info"
    ],
    "outputs": [],
    "metadata": {}
