--- a/examples/0_simulation.ipynb
+++ b/examples/0_simulation.ipynb
@@ -5,12 +5,12 @@
    "source": [
     "# Simulation\n",
     "\n",
-    "In this notebook, we will simulate raw MEG data with epileptic spikes that we will use to test the pipelines and in the other examples. For the simulation we use MNE-Python [sample dataset](https://mne.tools/stable/overview/datasets_index.html#sample). We have the following goals:\n",
-    "1. Simulate raw MEG data with events similar to the epileptic spikes\n",
-    "2. Simulate the resection area which we will use as a ground truth to test the detection pipelines\n",
-    "3. Evaluate the signal to noise ration of the simulated events\n",
+    "In this notebook, we simulate raw MEG data with epileptic spikes that we use to test pipelines and in other examples. For the simulation we use MNE-Python [sample dataset](https://mne.tools/stable/overview/datasets_index.html#sample). We pursue following goals:\n",
+    "1. to simulate raw MEG data that include events similar to epileptic spikes;\n",
+    "2. to simulate the resection area which we will use as a ground truth to test the detection pipelines;\n",
+    "3. to evaluate the signal-to-noise ratio of simulated events.\n",
     "\n",
-    "First, we import the `simulation` module and other packages. NOTE: To import the `simulation` we should change the working directory if we are running this example from the cloned GitHub repository.\n"
+    "First, we import the `simulation` module and other packages. NOTE: To import `simulation` the working directory should be changed if the example is run from the cloned GitHub repository.\n"
    ],
    "metadata": {}
   },
@@ -73,7 +73,7 @@
    "source": [
     "## Spike shapes\n",
     "\n",
-    "For the simulation we use four different spike shapes extracted from the stereo-EEG recording. `sim.activations` contains the list with labels and amplitudes for each spike shape. In the next cell we plot spike shapes and the peak for each spike shape. We will use this peaks to annotate simulated raw data and estimate signal to noise ratio."
+    "For the simulation we use four different spike shapes extracted from the stereo-EEG recording. `sim.activations` contains the list with labels and amplitudes for each spike shape. In the next cell we plot spike shapes and the peak for each spike shape. We will use these peaks to annotate simulated raw data and estimate signal-to-noise ratio."
    ],
    "metadata": {}
   },
@@ -130,7 +130,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "`sim.simulate_dataset` function added the annotation for the simulated raw data at the peak. We can view the simulated raw data using `mne.io.Raw.plot()`."
+    "`sim.simulate_dataset` function added the annotation for the simulated raw data at the peak. We can display the simulated raw data using `mne.io.Raw.plot()`."
    ],
    "metadata": {}
   },
@@ -148,7 +148,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Using the annotation we can create epochs for each channel type. Note that we have 14 events instead of 15 for the fist and the last simulated spikes shape. This happens beause there is no one second window around the first and the last event in the simulation."
+    "Using the annotation we can create epochs for each channel type. Note that we have 14 events instead of 15 for the first and the last simulated spikes shape. This happens because there is no one-second window around the first and the last event in the simulation."
    ],
    "metadata": {}
   },
@@ -193,7 +193,7 @@
     "## Plot sources locations\n",
     "\n",
     "\n",
-    "We can plot the locations of the labels on the glass brain. Later we will call this as a __resection area__ and use this locations as ground truth to compare with the results of our detection pipelines."
+    "We can plot the locations of the labels on the glass brain. Later we will call this a __resection area__ and use these locations as a ground truth to compare with the results of our detection pipelines."
    ],
    "metadata": {}
   },
@@ -218,20 +218,20 @@
    "source": [
     "# SNR\n",
     "\n",
-    "To test how the signal to noise ratio influenses our detection we estimate it using the channels amplitude of the simulated events.\n",
+    "To test how the signal-to-noise ratio influenses our detection we estimate it using the channels' amplitude of the simulated events.\n",
     "\n",
-    "Signal to noise ratio was defined as following:\n",
+    "Signal-to-noise ratio was defined as follows:\n",
     "\n",
     "$$10*\\log_{10} \\left( \\frac{1}{N_{ch}}\\sum_{k=1}^{N_{ch}} \\frac{\\frac{1}{N_{tr}}\\sum_{t=1}^{N_{tr}}a_{k}^2}{\\frac{1}{N_{tr}}\\sum_{t=1}^{N_{tr}}s_{k}^2} \\right) \\tag{1}$$\n",
     "\n",
-    "where $a_{k}^2$ is the mean $amplitude^2$ around the peak (+-20 ms) of the channel $k$, $s_{k}^2$ is the noise variance of this channel, $N_{tr}$ is number of trials and $N_{ch}$ is the number of channels. We estimated two SNR: SNR for all channels and SNR for the first 20 channels with the maximal amplitude.\n"
+    "where $a_{k}^2$ is the mean $amplitude^2$ around the peak (+-20 ms) of the channel $k$, $s_{k}^2$ is the noise variance of this channel, $N_{tr}$ is number of trials and $N_{ch}$ is the number of channels. We estimated two SNRs: SNR for all channels and SNR for the first 20 channels with the maximum amplitude.\n"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "We plot the average $amplitude^2$ across the trial for all channels and 20 with the maximal amplitude using `plot_epochs_snr`."
+    "We plot the average $amplitude^2$ across a trial for all channels as well as for 20 channels with the maximum amplitude using `plot_epochs_snr`."
    ],
    "metadata": {}
   },
